[package]
name = "theme_engine"
version = "1.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = "0.7.5"
dotenvy = "0.15.7"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.12.4", features = ["json", "native-tls-vendored"] }
serde = "1.0.203"
serde_json = "1.0.117"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "time"] }
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros"] }
